trunk/Archive2/9b/e2351c24c1fa6b/output
main.cpp:40:9: warning: unused variable 'x' [-Wunused-variable]
    ABC x = {number, m, {1, 2, 3}}; 
        ^
main.cpp:51:9: warning: unused variable 'n' [-Wunused-variable]
    int n; 
        ^
main.cpp:52:10: warning: unused variable 'c' [-Wunused-variable]
    char c; 
         ^
main.cpp:53:9: warning: unused variable 'a' [-Wunused-variable]
    int a[4] = {}; 
        ^
main.cpp:85:5: error: redefinition of 'main'
int main ()
    ^
main.cpp:35:5: note: previous definition is here
int main()
    ^
4 warnings and 1 error generated.
